# MyEmulator

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  YourEmulator  YourVM  main_test  memory_dump.txt  readme.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  google_test.yml
inc/: main.hpp  memoryMap.hpp
inc/bus/: bus.hpp  busController.hpp  busDevice.hpp
inc/cpu/: cpu.hpp  decoder.hpp
inc/ram/: ram.hpp
inc/runtime/: InstructionSet.hpp  encoder.hpp  instructionInfo.hpp  instructions.def  rules.hpp  utils.hpp
inc/runtime/debugger/: decoderDebug.hpp  stackDebug.hpp
inc/services/: bus.hpp  cpu.hpp  memory.hpp  ram.hpp  stack.hpp
inc/services/bus/: busController.hpp  busDevice.hpp
src/: app.rs  cli.rs  constants.rs  instruction.rs  loader.rs  main.cpp  main.rs
src/bus/: busController.cpp
src/cpu/: cpu.cpp  decoder.cpp
src/machine/: cpu_exec.rs  diagnostics.rs  interrupts.rs  memory_bus.rs  mod.rs  registers.rs  run_loop.rs  ssd.rs  stack.rs
src/ram/: ram.cpp
src/runtime/: decoder.cpp  encoder.cpp
src/services/: cpu.cpp  memory.cpp  ram.cpp  stack.cpp
src/services/bus/: busController.cpp
tests/: cpu_test.cpp  main_test.cpp  stack_test.cpp
